language/move-compiler/tests/move_check/translate/friend_in_spec.move

module 0x01::M {
    spec module {
        friend 0x02::A;
    }
}
